ping-pong/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-count-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: requestcount
  template:
    metadata:
      labels:
        app: requestcount
    spec:
      volumes:
        - name: shared-hash
          persistentVolumeClaim:
            claimName: hash-claim
      containers:
        - name: pingpong
          image: ping-pong:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: shared-hash
            mountPath: /usr/src/app/files
        - name: hashreader
          image: hash-reader:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: text
              mountPath: /usr/src/app/files
              readOnly: true
      volumes:
        - name: text
          configMap:
            name: hash-config
            items:
            - key: "information.txt"
            path: "information.txt"
