ping-pong/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: requestcount # This is the app as declared in the deployment.
  ports:
    - port: 2453 # This is a port that is available to the cluster, in this case it can be ~ anything
      protocol: TCP
      targetPort: 5001 # This is the target port

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: hashgenerator-svc
# spec:
#   type: ClusterIP
#   selector:
#     app: requestcount # This is the app as declared in the deployment.
#   ports:
#     - port: 1234 # This is a port that is available to the cluster, in this case it can be ~ anything
#       protocol: TCP
#       targetPort: 4040 # This is the target port

---
apiVersion: v1
kind: Service
metadata:
  name: hashreader-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: requestcount # This is the app as declared in the deployment.
  ports:
    - port: 1334 # This is a port that is available to the cluster, in this case it can be ~ anything
      protocol: TCP
      targetPort: 5000 # This is the target port

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: exercises
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: postgresapp
